--- a/ani2/src/LandPage/LandPage.scss
+++ b/ani2/src/LandPage/LandPage.scss
@@ -1,3 +1,14 @@
+.title{
+    padding-top: 5px;
+      font-size: 50px;
+  font-weight: 600;
+  background-image: linear-gradient(112.1deg, rgb(32, 38, 57) 11.4%, rgb(63, 76, 119) 70.2%); 
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+
+}
+
 .line{
      display: flex;
      flex-direction: row ;
