--- a/ani2/src/TaskPage/TaskMain.scss
+++ b/ani2/src/TaskPage/TaskMain.scss
@@ -8,7 +8,8 @@
       display: flex;
   flex-direction: row;
   overflow-x: auto;
-  width: 99vw;
-  justify-content: space-between;
+  width: 90vw;
+  justify-content: flex-start;
+
   gap: 3%;
 }
