--- a/ani2/src/TaskPage/TaskMain.scss
+++ b/ani2/src/TaskPage/TaskMain.scss
@@ -1,6 +1,14 @@
+@import "./../LandPage/LandPage.scss";
+.verticalFlex{
+  background-color: white;
+  border-radius: $myBorderRadius;
+  margin-left: $myPaddingLeft;
+  margin-right: $myPaddingLeft;
+  margin-bottom: $myPaddingLeft;
+}
 .center {
   margin: auto;
-  width: 50%;
+  width: 70vw;
   padding: 10px;
 }
 
@@ -8,7 +16,7 @@
       display: flex;
   flex-direction: row;
   overflow-x: auto;
-  width: 90vw;
+  width: 80vw;
   justify-content: flex-start;
 
   gap: 3%;
