--- a/ani2/src/TaskPage/TaskMain.scss
+++ b/ani2/src/TaskPage/TaskMain.scss
@@ -35,6 +35,7 @@
 .horizontalFlex{
    display: flex;
    flex-direction: row;
+   gap: 2px;
 }
 
 .horizontalFlexSpaceBetween{
@@ -54,11 +55,17 @@
   flex-wrap: wrap ;
 }
 .littleBox{
-
+  @extend .horizontalFlex;
+  border:1px solid black;
   flex: 1 1 0px;
   flex-basis: 0;
+  padding-left: 5px;
 }
 
 .topMargin{
   padding-top: 5px;
+}
+.title{
+  padding-top: 2%;
+  padding-bottom: 2%;
 }
