--- a/ani2/src/NavBar/Navbar.scss
+++ b/ani2/src/NavBar/Navbar.scss
@@ -18,6 +18,8 @@
     width: 80px;
     height: 3vw;
     transform: translateY(0.5vw);
+
+    cursor: pointer;
 }
 
 .ani_logo {
@@ -26,7 +28,6 @@
     padding-left: 5%;
     padding-right: 3%;
 }
-
 .uminho_logo {
 
     @extend .logo;
@@ -35,7 +36,8 @@
 
 .isep_logo {
     @extend .logo;
-    width: 90px;
+    width: 85px;
+    margin-right: 3%;
 }
 .titleNavBarWithMargin {
     height: 3vw;
