--- a/ani2/src/Login/Login.scss
+++ b/ani2/src/Login/Login.scss
@@ -7,8 +7,17 @@ margin: auto;
 
 }
 .flexVertical{
+  margin-top: 2%;
   display: flex;
   flex-direction: column;
+   align-items: center;
+    justify-content: center;
+    gap: 30px;
+  }
+.flexHorizontal{
+  margin-top: 2%;
+  display: flex;
+  flex-direction: row;
    align-items: center;
     justify-content: center;
     gap: 30px;
