Btns stepper done, Delete scenarios

--- a/ani2/src/MakeAllocations/SecondPage/SecondPage.scss
+++ b/ani2/src/MakeAllocations/SecondPage/SecondPage.scss
@@ -78,3 +78,10 @@
    flex-direction: column;
 gap: 30%;
 }
+.allLeft{
+  display: flex;
+justify-content: flex-start;
+margin-left: 1%;
+margin-top: 1%;
+  
+}
