--- a/ani2/src/NavBar/Navbar.scss
+++ b/ani2/src/NavBar/Navbar.scss
@@ -34,7 +34,9 @@
 
 .logos {
     @extend .logo;
-    width: 30%;
+    width: 25%;
+    margin-right: 1%;
+    height: 3vw;
 }
 .isep_logo {
     @extend .logo;
@@ -49,6 +51,6 @@
 .titleNavBar {
     height: 3vw;
     transform: translateY(1vw);
-    margin-right: 3%;
-    width: 25%;
+    margin-right: 1%;
+    width: 15%;
 }
